cc_binary(
    name = "kmav_dataset",
    srcs = ["main.cpp"],
    visibility = ["//visibility:public"],
    deps = [
        "//monovins/client",
        "@com_github_google_glog//:glog",
        "@opencv_archive//:opencv",
        "@com_github_ben-strasser_fast-cpp-csv-parser//:fast-cpp-csv-parser",
    ],
)
