load("@build_stack_rules_proto//cpp:cpp_grpc_library.bzl", "cpp_grpc_library")
load("@build_stack_rules_proto//cpp:cpp_proto_library.bzl", "cpp_proto_library")

proto_library(
  name = "protos",
  srcs = [
    "camera.proto",
    "error.proto",
    "imu.proto",
    "image.proto",
    "pose.proto",
    "quaterniond.proto",
    "vector3d.proto",
  ],
  deps = [
    "@com_google_protobuf//:timestamp_proto",
  ],
  visibility = ["//monovins:__subpackages__"],
)


proto_library(
    name = "api",
    srcs = ["monovins.proto"],
    visibility = ["//monovins:__subpackages__"],
    deps = [
      "@com_google_protobuf//:timestamp_proto",
      ":protos",
    ],
)

cpp_proto_library(
  name = "cc_proto",
  deps = [":protos"],
  visibility = ["//visibility:public"],
)

cpp_grpc_library(
    name = "cc_grpc",
    visibility = ["//visibility:public"],
    deps = [":api"],
)
