cc_binary(
    name = "app",
    srcs = [
        "app.cpp",
        "app.h",
        "main.cpp",
    ],
    # hdrs = ["app.h"],
    visibility = ["//visibility:public"],
    deps = [
        "//monovins/api:cc_grpc",
        "//monovins/data_manager",
        "//monovins/filter/ukf",
        "//monovins/vision/odometer",
        "@com_github_google_glog//:glog",
    ],
)
