cc_library(
    name = "data_manager",
    srcs = ["data_manager.cpp"],
    hdrs = ["data_manager.h"],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "data_manager_test",
    srcs = ["data_manager_test.cpp"],
    deps = [
        ":data_manager",
        "//external:gtest",
    ],
)
