cc_library(
  name = "imshow_wrapper",
  srcs = [
    "imshow_wrapper.h",
    "imshow_wrapper.cpp",
  ],
  hdrs = ["imshow_wrapper.h"],
  deps = [
  # "@opencv_local//:opencv",
    "@opencv_archive//:opencv",
    "@com_github_gflags_gflags//:gflags",
    "@com_github_google_glog//:glog",
  ],
  visibility = ["//visibility:public"],
)
