cc_library(
    name = "odometer",
    srcs = [
        "odometer.cpp",
        "odometer.h",
    ],
    hdrs = ["odometer.h"],
    visibility = ["//visibility:public"],
    deps = [
        # "@opencv_local//:opencv",
        "@opencv_archive//:opencv",
        "//monovins/vision:imshow_wrapper",
    ],
)
